REST Minion/Node implementation Remove TestFeature being passed to ScenarioRunner and scenario events and add only requried details Merge step results with variables for local run as well. Move incident raising from steps to step invokers to allow remote step running. Reomove project version variable to avoid warnings and potential issues

--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -17,7 +17,7 @@
 	<parent>
 		<groupId>org.mvss</groupId>
 		<artifactId>karta</artifactId>
-		<version>${project.version}</version>
+		<version>0.0.3</version>
 	</parent>
 
 	<dependencies>
@@ -100,6 +100,11 @@
 			<artifactId>quartz</artifactId>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
+		</dependency>
 	</dependencies>
 
 </project>
