--- a/packager/pom.xml
+++ b/packager/pom.xml
@@ -16,35 +16,35 @@
 	<parent>
 		<groupId>org.mvss</groupId>
 		<artifactId>karta</artifactId>
-		<version>${project.version}</version>
+		<version>0.0.3</version>
 	</parent>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.mvss.karta</groupId>
 			<artifactId>framework</artifactId>
-			<version>${project.version}</version>
+			<version>0.0.3</version>
 			<scope>runtime</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.mvss.karta</groupId>
 			<artifactId>cli</artifactId>
-			<version>${project.version}</version>
+			<version>0.0.3</version>
 			<scope>runtime</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.mvss.karta</groupId>
 			<artifactId>samples</artifactId>
-			<version>${project.version}</version>
+			<version>0.0.3</version>
 			<scope>runtime</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.mvss.karta</groupId>
 			<artifactId>server</artifactId>
-			<version>${project.version}</version>
+			<version>0.0.3</version>
 			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
