--- a/cli/pom.xml
+++ b/cli/pom.xml
@@ -10,7 +10,7 @@
 	<parent>
 		<groupId>org.mvss</groupId>
 		<artifactId>karta</artifactId>
-		<version>${project.version}</version>
+		<version>0.0.3</version>
 	</parent>
 
 	<properties>
@@ -24,7 +24,7 @@
 		<dependency>
 			<groupId>org.mvss.karta</groupId>
 			<artifactId>framework</artifactId>
-			<version>${project.version}</version>
+			<version>0.0.3</version>
 		</dependency>
 	</dependencies>
 
