--- a/server/pom.xml
+++ b/server/pom.xml
@@ -16,7 +16,7 @@
 	<parent>
 		<groupId>org.mvss</groupId>
 		<artifactId>karta</artifactId>
-		<version>${project.version}</version>
+		<version>0.0.3</version>
 	</parent>
 
 	<!-- <parent> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-parent</artifactId> 
@@ -115,15 +115,11 @@
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		<!-- <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-test</artifactId> 
-			<scope>test</scope> <exclusions> <exclusion> <groupId>org.junit.vintage</groupId> 
-			<artifactId>junit-vintage-engine</artifactId> </exclusion> </exclusions> 
-			</dependency> -->
 
 		<dependency>
 			<groupId>org.mvss.karta</groupId>
 			<artifactId>framework</artifactId>
-			<version>${project.version}</version>
+			<version>0.0.3</version>
 		</dependency>
 	</dependencies>
 
