BeanRegistry now registers beans with names as a map and allows scan and add beans using @KartaBean TestLifeCycleHook plugin added to perform synchronous actions on test life cycle. Kriya is not a TestLifeCycleHook as well with support for @BeforeFeature, @AfterFeature, @BeforeScenario @AfterSenario hooks based on tags. Fix Java feature and iteration runner events and move code to utility classes. Reporting related enhancements to feature and iteration runners. HTMLReportTestEventListener added Samples added for bean registry changes, life cycle hooks. AnnotationScanner utility

--- a/framework/src/main/resources/KartaBasePluginsConfiguration.yaml
+++ b/framework/src/main/resources/KartaBasePluginsConfiguration.yaml
@@ -15,3 +15,6 @@
 
 - pluginName: RabbitMQTestEventListener
   className: org.mvss.karta.framework.runtime.impl.RabbitMQTestEventListener
+
+- pluginName: HTMLReportTestEventListener
+  className: org.mvss.karta.framework.runtime.impl.HTMLReportTestEventListener
