--- a/packager/src/main/resources/samples/KartaRuntimeProperties.yaml
+++ b/packager/src/main/resources/samples/KartaRuntimeProperties.yaml
@@ -28,6 +28,9 @@ DataFilesTestDataSource:
     - dataFile1.yaml
     - testDataFolder
 
+HTMLReportTestEventListener:
+  runReportsBaseFolderName: sampleReports
+
 ObjectGenTestDataSource:
   objectRuleMap:
     employee:
