--- a/packager/src/main/resources/samples/testDataFolder/javafeaturedata/dataFile2.yaml
+++ b/packager/src/main/resources/samples/testDataFolder/javafeaturedata/dataFile2.yaml
@@ -1,86 +1,6 @@
 Sample Java Test Feature:
-    myFeatureSetup:
-        __generic_step__:
-            data1:
-                - value1
-                - value2
-                - value3
-            data2:
-                - mapval1:
-                      mapvalkey1: mapvalkey1value
-                      mapvalkey2: mapvalkey2value
-                - mapval2:
-                      mapvalkey1: mapvalkey1value
-                      mapvalkey2: mapvalkey2value
-                - mapval3:
-                      mapvalkey1: mapvalkey1value
-                      mapvalkey2: mapvalkey2value
-    myScenarioSetupMethod:
-        __generic_step__:
-            data1:
-                - value1
-                - value2
-                - value3
-            data2:
-                - mapval1:
-                      mapvalkey1: mapvalkey1value
-                      mapvalkey2: mapvalkey2value
-                - mapval2:
-                      mapvalkey1: mapvalkey1value
-                      mapvalkey2: mapvalkey2value
-                - mapval3:
-                      mapvalkey1: mapvalkey1value
-                      mapvalkey2: mapvalkey2value
-    Scenario1:
-        __generic_step__:
-            data1:
-                - value1
-                - value2
-                - value3
-            data2:
-                - mapval1:
-                      mapvalkey1: mapvalkey1value
-                      mapvalkey2: mapvalkey2value
-                - mapval2:
-                      mapvalkey1: mapvalkey1value
-                      mapvalkey2: mapvalkey2value
-                - mapval3:
-                      mapvalkey1: mapvalkey1value
-                      mapvalkey2: mapvalkey2value
-    Scenario2:
-        __generic_step__:
-            data1:
-                - value1
-                - value2
-                - value3
-            data2:
-                - mapval1:
-                      mapvalkey1: mapvalkey1value
-                      mapvalkey2: mapvalkey2value
-                - mapval2:
-                      mapvalkey1: mapvalkey1value
-                      mapvalkey2: mapvalkey2value
-                - mapval3:
-                      mapvalkey1: mapvalkey1value
-                      mapvalkey2: mapvalkey2value
-    Scenario3:
-        __generic_step__:
-            data1:
-                - value1
-                - value2
-                - value3
-            data2:
-                - mapval1:
-                      mapvalkey1: mapvalkey1value
-                      mapvalkey2: mapvalkey2value
-                - mapval2:
-                      mapvalkey1: mapvalkey1value
-                      mapvalkey2: mapvalkey2value
-                - mapval3:
-                      mapvalkey1: mapvalkey1value
-                      mapvalkey2: mapvalkey2value
-    myScenarioTearDownMethod:
-        __generic_step__:
+    __feature_setup__:
+        My feature setup:
             data1:
                 - value1
                 - value2
@@ -96,8 +16,150 @@ Sample Java Test Feature:
                       mapvalkey1: mapvalkey1value
                       mapvalkey2: mapvalkey2value
 
-    myFeatureTearDownMethod:
-        __generic_step__:
+    Scenario1:
+        My scenario setup:
+            data1:
+                - value1
+                - value2
+                - value3
+            data2:
+                - mapval1:
+                      mapvalkey1: mapvalkey1value
+                      mapvalkey2: mapvalkey2value
+                - mapval2:
+                      mapvalkey1: mapvalkey1value
+                      mapvalkey2: mapvalkey2value
+                - mapval3:
+                      mapvalkey1: mapvalkey1value
+                      mapvalkey2: mapvalkey2value
+        Scenario1:
+            data1:
+                - value1
+                - value2
+                - value3
+            data2:
+                - mapval1:
+                      mapvalkey1: mapvalkey1value
+                      mapvalkey2: mapvalkey2value
+                - mapval2:
+                      mapvalkey1: mapvalkey1value
+                      mapvalkey2: mapvalkey2value
+                - mapval3:
+                      mapvalkey1: mapvalkey1value
+                      mapvalkey2: mapvalkey2value
+
+        My scenario teardown:
+            data1:
+                - value1
+                - value2
+                - value3
+            data2:
+                - mapval1:
+                      mapvalkey1: mapvalkey1value
+                      mapvalkey2: mapvalkey2value
+                - mapval2:
+                      mapvalkey1: mapvalkey1value
+                      mapvalkey2: mapvalkey2value
+                - mapval3:
+                      mapvalkey1: mapvalkey1value
+                      mapvalkey2: mapvalkey2value
+    Scenario2:
+        My scenario setup:
+            data1:
+                - value1
+                - value2
+                - value3
+            data2:
+                - mapval1:
+                      mapvalkey1: mapvalkey1value
+                      mapvalkey2: mapvalkey2value
+                - mapval2:
+                      mapvalkey1: mapvalkey1value
+                      mapvalkey2: mapvalkey2value
+                - mapval3:
+                      mapvalkey1: mapvalkey1value
+                      mapvalkey2: mapvalkey2value
+        Scenario2:
+            data1:
+                - value1
+                - value2
+                - value3
+            data2:
+                - mapval1:
+                      mapvalkey1: mapvalkey1value
+                      mapvalkey2: mapvalkey2value
+                - mapval2:
+                      mapvalkey1: mapvalkey1value
+                      mapvalkey2: mapvalkey2value
+                - mapval3:
+                      mapvalkey1: mapvalkey1value
+                      mapvalkey2: mapvalkey2value
+
+        My scenario teardown:
+            data1:
+                - value1
+                - value2
+                - value3
+            data2:
+                - mapval1:
+                      mapvalkey1: mapvalkey1value
+                      mapvalkey2: mapvalkey2value
+                - mapval2:
+                      mapvalkey1: mapvalkey1value
+                      mapvalkey2: mapvalkey2value
+                - mapval3:
+                      mapvalkey1: mapvalkey1value
+                      mapvalkey2: mapvalkey2value
+    Scenario3:
+        My scenario setup:
+            data1:
+                - value1
+                - value2
+                - value3
+            data2:
+                - mapval1:
+                      mapvalkey1: mapvalkey1value
+                      mapvalkey2: mapvalkey2value
+                - mapval2:
+                      mapvalkey1: mapvalkey1value
+                      mapvalkey2: mapvalkey2value
+                - mapval3:
+                      mapvalkey1: mapvalkey1value
+                      mapvalkey2: mapvalkey2value
+        Scenario3:
+            data1:
+                - value1
+                - value2
+                - value3
+            data2:
+                - mapval1:
+                      mapvalkey1: mapvalkey1value
+                      mapvalkey2: mapvalkey2value
+                - mapval2:
+                      mapvalkey1: mapvalkey1value
+                      mapvalkey2: mapvalkey2value
+                - mapval3:
+                      mapvalkey1: mapvalkey1value
+                      mapvalkey2: mapvalkey2value
+
+        My scenario teardown:
+            data1:
+                - value1
+                - value2
+                - value3
+            data2:
+                - mapval1:
+                      mapvalkey1: mapvalkey1value
+                      mapvalkey2: mapvalkey2value
+                - mapval2:
+                      mapvalkey1: mapvalkey1value
+                      mapvalkey2: mapvalkey2value
+                - mapval3:
+                      mapvalkey1: mapvalkey1value
+                      mapvalkey2: mapvalkey2value
+
+    __feature_teardown__:
+        My feature teardown:
             data1:
                 - value1
                 - value2
