--- a/samples/src/main/resources/SampleFeatureFile3.yaml
+++ b/samples/src/main/resources/SampleFeatureFile3.yaml
@@ -1,6 +1,28 @@
 ---
 name: RemoteCalculatorTest
 description: This is a sample 2 YAML format feature file testing a calculator's function
+
+testJobs:
+  - name: job1
+    repeat: true
+    interval: 100
+    steps:
+      - identifier: authenticate to get new token
+        testData:
+          userName: "remoteadmin"
+          password: "password@123"
+
+      - identifier: reserve use of calculator for next "100" milliseconds
+
+      - identifier: logoff the old token
+    node: Node1
+
+  - name: job2
+    steps:
+      - identifier: the calculator is powered on
+      - identifier: the all clear button is pressed
+    node: Node2
+
 setupSteps:
   - identifier: Given the calculator is powered on
     node: Node1
