--- a/packager/src/main/resources/samples/KartaConfiguration.yaml
+++ b/packager/src/main/resources/samples/KartaConfiguration.yaml
@@ -55,3 +55,6 @@ testThreadCount: 10
 
 configurationScanPackages:
   - org.mvss.karta.samples.config
+
+testCatalogFragmentFiles:
+  - SampleTestCatalogFragment.yaml
