PreparedChaosAction does not include ChaosAction but only the required attributes from ChaosAction ChaosAction level and unit moved int Chaos class. Java docs for some class Randomization now explicity uses ArrayList instead of List Chaos concept document updates

--- a/samples/src/main/resources/SampleFeatureFile4.yaml
+++ b/samples/src/main/resources/SampleFeatureFile4.yaml
@@ -19,8 +19,9 @@ testScenarios:
           subjects:
             - calculator1
             - calculator2
-          chaosLevel: 50
-          chaosUnit: PERCENTAGE
+          chaos:
+            chaosLevel: 50
+            chaosUnit: PERCENTAGE
 
     executionSteps:
       - identifier: When the all clear button is pressed
