--- a/samples/src/main/resources/KartaTestCatalogFragment.yaml
+++ b/samples/src/main/resources/KartaTestCatalogFragment.yaml
@@ -52,4 +52,36 @@ tests:
     numberOfIterations: 1
     threadGroup: calcChaos
 
+  - name: SampleGherkinFile5
+    priority: 2
+    description: sample Gherkin feature file4
+    featureSourceParserPlugin: Gherkin
+    tags:
+      - Gherkin
+    featureFileName: SampleFeatureFile5.feature
+    numberOfIterations: 4
+    sourceArchive: samples.jar
+
+  - testType: JAVA_TEST
+    priority: 1
+    name: SampleJavaTest
+    description: sample java test
+    tags:
+      - javaTests
+    javaTestClass: org.mvss.karta.samples.tests.Test1
+    chanceBasedScenarioExecution: true
+    exclusiveScenarioPerIteration: true
+    numberOfIterations: 10
+    numberOfThreads: 5
+    sourceArchive: samples.jar
+
+  - name: UIAutomation
+    priority: 1
+    description: UI Automation test
+    tags:
+      - UI
+    featureFileName: UIAutomation.yaml
+    numberOfIterations: 1
+    sourceArchive: samples.jar
+
 subCategories: []
