Fixes to be able to test project from IDE: configurations/properties/catalog files can be eiter loaded from file system or classpath.

--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -28,5 +28,15 @@
 		</dependency>
 	</dependencies>
 
+	<!-- <profiles> <profile> <id>PackageTests</id> <build> <plugins> <plugin> 
+		<groupId>org.apache.maven.plugins</groupId> <artifactId>maven-dependency-plugin</artifactId> 
+		<executions> <execution> <id>copy-dependencies</id> <phase>prepare-package</phase> 
+		<goals> <goal>copy-dependencies</goal> </goals> <configuration> <outputDirectory>${project.build.directory}/classes/lib</outputDirectory> 
+		<overWriteReleases>false</overWriteReleases> <overWriteSnapshots>false</overWriteSnapshots> 
+		<overWriteIfNewer>true</overWriteIfNewer> <excludeScope>provided</excludeScope> 
+		</configuration> </execution> </executions> </plugin> <plugin> <groupId>org.apache.maven.plugins</groupId> 
+		<artifactId>maven-jar-plugin</artifactId> </plugin> </plugins> </build> </profile> 
+		</profiles> -->
+
 
 </project>
