--- a/samples/src/main/resources/KartaRuntimeProperties.yaml
+++ b/samples/src/main/resources/KartaRuntimeProperties.yaml
@@ -47,7 +47,7 @@ ObjectGenTestDataSource:
   objectRuleMap:
     employee:
       ruleType: OBJECT_RULE
-      objectRules:
+      fieldGenRules:
         - fieldName: employeeId
           ruleType: STRING_RANGE
           range:
@@ -60,7 +60,7 @@ ObjectGenTestDataSource:
             max: 12
         - fieldName: gender
           ruleType: MUTEX_OBJECT_RULE_VALUE
-          objectRules:
+          fieldGenRules:
             - ruleType: VALUES
               probability: 0.9
               values:
@@ -74,7 +74,7 @@ ObjectGenTestDataSource:
           ruleType: BOOLEAN
         - fieldName: role
           ruleType: MUTEX_OBJECT_RULE_VALUE
-          objectRules:
+          fieldGenRules:
             - ruleType: VALUES
               probability: 0.9
               values:
