--- a/samples/src/main/resources/KartaConfiguration.yaml
+++ b/samples/src/main/resources/KartaConfiguration.yaml
@@ -35,21 +35,25 @@ nodeName: local
 nodes:
   - name: Node1
     host: localhost
-    port: 17171
+    port: 18080
     enableSSL: true
-    nodeType: RMI
+    nodeType: REST
     minion: true
 
   - name: Node2
     host: localhost
-    port: 17171
+    port: 18080
     enableSSL: true
-    nodeType: RMI
+    nodeType: REST
     minion: true
 
 minionsEnabled: true
 
-testThreadCount: 1
+### Thread group name map to the number of threads to use to run tests with for the thread group. __default__ is the name of the default thread group
+threadGroups:
+  __default__: 1
+  calculator: 5
+  calcChaos: 1
 
 configurationScanPackages:
   - org.mvss.karta.samples.config
