--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,1 +1,28 @@
+#Server properties
 server.port=18080
+
+#JPA properties
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:./karta;DB_CLOSE_ON_EXIT=FALSE
+#spring.datasource.url=jdbc:h2:file:./KartaDashboard
+#jdbc:h2:./KartaDashboard;DB_CLOSE_ON_EXIT=TRUE
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=true
+
+spring.datasource.username=karta
+spring.datasource.password=karta@123
+
+spring.datasource.testOnBorrow=true
+spring.datasource.validationQuery=SELECT 1
+
+#spring.datasource.show-sql=true
+#spring.datasource.maxActive=10
+#spring.datasource.hikari.maximum-pool-size=10
+
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
