--- a/runtime/src/main/resources/bin/KartaConfiguration.yaml
+++ b/runtime/src/main/resources/bin/KartaConfiguration.yaml
@@ -47,7 +47,7 @@ nodeName: local
 
 ###   - name: Node2
 ###     host: localhost
-###     port: 18090
+###     port: 18080
 ###     enableSSL: true
 ###     nodeType: REST
 ###     minion: true
@@ -62,3 +62,37 @@ threadGroups:
 
 ### The packages to look for configuration objects like Beans
 configurationScanPackages: []
+
+### The properties for various property groups.
+### Each group is a property key to value map
+properties:
+  Karta:
+    EventProcessor.numberOfThread: 1
+    EventProcessor.maxEventQueueSize: 100
+    node.config:
+      host: localhost
+      port: "17171"
+      enableSSL: true
+
+  ### Add your step definition and chaos definition package names here
+  Kriya:
+    stepDefinitionPackageNames: []
+    chaosActionDefinitionPackageNames: []
+
+  # DataFilesTestDataSource:
+  #   dataPath:
+  #     - testdata
+
+  DumpToFileTestEventListener:
+    fileName: KartaEventsRawDump.bin
+
+  HTMLReportTestEventListener:
+    runReportsBaseFolderName: reports
+
+  RabbitMQTestEventListener:
+    queueName: KartaEvents
+    userName: guest
+    password: guest
+    virtualHost: "/"
+    hostName: localhost
+    portNumber: 5672
