Usability improvments for configuration Changed Karta Configuration Overrides file to be KartaConfigurationOverrides.yaml and need have only overriden values Java properties file format now supported as a property file format but only supports value types serializable from strings. KartaTestProperties folder if present will automatically be read for test property files Support for java properties file format for data file as well. Organized feature files in sample project Renamed TestStep.identifier to TestStep.step for better readability of feature files. Add timer class which can be serialized to step results.

--- a/runtime/src/main/resources/bin/KartaConfiguration.yaml
+++ b/runtime/src/main/resources/bin/KartaConfiguration.yaml
@@ -22,7 +22,9 @@ defaultTestDataSourcePlugins:
 
 ### The list of property files to load properties from (YAML/JSON/XML based on file extention)
 propertyFiles:
-  - KartaRuntimeProperties.yaml
+  - KartaProperties.yaml
+  - KartaPluginProperties.yaml
+  - KartaTestProperties
 
 ### The SSL connection properties for Karta if enabling SSL for node communication
 sslProperties:
