--- a/samples/src/main/resources/featureFiles/TestSet1/SampleFeatureFile4.yaml
+++ b/samples/src/main/resources/featureFiles/TestSet1/SampleFeatureFile4.yaml
@@ -2,11 +2,11 @@
 name: ChaoticCalculatorTest
 description: This is a sample Yerkin test for chaos testing
 setupSteps:
-  - identifier: Given the calculator is powered on
+  - step: Given the calculator is powered on
 
 scenarioSetupSteps:
-  - identifier: When the all clear button is pressed
-  - identifier: Then the calculator should display "0"
+  - step: When the all clear button is pressed
+  - step: Then the calculator should display "0"
 
 testScenarios:
   - name: Scenario1
@@ -24,11 +24,11 @@ testScenarios:
             chaosUnit: PERCENTAGE
 
     executionSteps:
-      - identifier: When the all clear button is pressed
-      - identifier: Then the calculator should display "0"
+      - step: When the all clear button is pressed
+      - step: Then the calculator should display "0"
 
 scenarioTearDownSteps:
-  - identifier: Then dummy teardown step
+  - step: Then dummy teardown step
 
 tearDownSteps:
-  - identifier: Then the calculator is powered off
+  - step: Then the calculator is powered off
